# senchi

./: .gitignore  LICENSE  README.md  requirements.txt  temp.inp  workplan.md
core/: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
core/bucket/: s3.py
core/iot/: Makefile  README.md  bluetoothcheck.sh  pyproject.toml  ref.md  switchbot.py  switchbot_test_results.json  test_webhook.py  webhook_config.json
core/iot/senchi/: README.md  build_and_run.sh
core/iot/senchi/senchi/: AppDelegate.swift  BluetoothManager.swift  BluetoothMode.swift  CentralViewController.swift  HomeMonitorApp.swift  Info.plist  IntegratedBluetoothManager.swift  LeakDetectorApp.swift  PeripheralViewController.swift  SceneDelegate.swift  TransferService.swift  ViewController.swift  senchi.entitlements  survey.json
core/iot/senchi/senchi.xcodeproj/: project.pbxproj
core/iot/senchi/senchi/API/: serv.swift  setup.swift  ws.swift
core/iot/senchi/senchi/Base.lproj/: Main.storyboard
core/iot/senchi/senchi/Configs/: Config.swift  Environment.swift
core/iot/senchi/senchi/Controllers/: ViewController.swift
core/iot/senchi/senchi/Controllers (DEP)/: ViewController.swift
core/iot/senchi/senchi/Delegates/: AppDelegate.swift  AuthManager.swift  PushManager.swift
core/iot/senchi/senchi/Models/: Auth.swift  Device.swift  Predictions.swift  Property.swift  Survey.swift  Token.swift  User.swift  Websocket.swift  WifiLocation.swift  WifiQR.swift
core/iot/senchi/senchi/Views/: ContentView.swift  OnboardingView.swift
core/iot/senchi/senchiTests/: senchiTests.swift
core/iot/senchi/senchiUITests/: senchiUITests.swift  senchiUITestsLaunchTests.swift
core/iot/wifi/: decode_bytearray.py  main.py  simple_webhook.py  switchbot.py  switchbot_leak_detector_profile.json  test_handshake.py  test_webhook.py  webhook_config.json
core/iot/zigbee/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  cfg.py  configuration.yml  docker-compose.yml  index.html  init.sql  mosquitto.conf  pyproject.toml  server.py  test.py
core/iot/zigbee/maindb/: __init__.py  gsheets.py  init.sql  pg.py
core/iot/zigbee/models/: tokens.py
core/iot/zigbee/monitor/: config.py  models.py  monitor.py  utils.py  zbm.py
core/iot/zigbee/mosquitto/: Dockerfile  models.py  mosquitto.conf  mosquitto_passwd  supervisord.conf  user_manager.py
core/iot/zigbee/mosquitto/data/: mosquitto.db
core/iot/zigbee/notifications/: apns_config.md  apns_service.py  noti.py
core/iot/zigbee/rdsdb/: Dockerfile  rdsdb.py  redis.conf
core/iot/zigbee/sms/: sms.py
core/iot/zigbee2mqtt/: .env.example  Makefile  docker-compose.yml
core/mgen/: .cache.sqlite  .gitignore  gmaps.py  house_analysis_result.json  house_labelling.py  improvement.json  improvement.txt  improvement_rubric.json  main.py  prompts.py  river_discharge.py  test.ipynb  tripo.py  vector_image.py
core/server/: app.py  config.py  mocker.py  pyproject.toml
core/server/api/v1/: README.md  api.py
core/server/api/v1/endpoints/: assessment.py  auth.py  coordinate_conversion.py  coordinates.py  external.py  labelling.py  location.py  messaging.py  photos.py  property.py  proxy.py  quotes.py  risk.py  streetview.py
core/server/api/v1/utils/: heading.py  utils.py
core/server/db/: __init__.py  pg.py  rds.py  schema.sql
core/server/schemas/: auth.py  coordinates.py  external.py  heading.py  property.py  quotes.py
core/sms/: sms.py
experiments/leak_model/prod/: Dockerfile  README.md  docker-compose.yml  mock.sh  pyproject.toml
experiments/leak_model/prod/src/: config.py  main.py  pipeline.py  pred.py  utils.py
experiments/leak_model/prod/test_data/: testing.py
experiments/leak_model/wdn_sim/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  how_to_improve.md  main.py  pyproject.toml  run_sim.sh  temp.inp
experiments/leak_model/wdn_sim/config/: house_profiles.json  leak_profiles.json  sensor_config.json
experiments/leak_model/wdn_sim/src/: simulate_all.py  simulate_house.py
experiments/leak_model/wdn_sim/src/events/: blockage_model.py  event_scheduler.py  leak_model.py  transient_events.py
experiments/leak_model/wdn_sim/src/generators/: demand_numpy.py
experiments/leak_model/wdn_sim/src/io/: assemble_polars.py  polars_sink.py
experiments/leak_model/wdn_sim/src/network/: builder.py
experiments/leak_model/wdn_sim/tests/: conftest.py  test_demand_generation.py  test_event_models.py  test_network_builder.py  test_sensor_model.py  test_simulate_house_light.py
experiments/rates/: .gitignore  README.md  config.py  helper.py  main.py  pyproject.toml  utils.py  vtwo.py
experiments/rates/analysis/: rate_analysis.ipynb  rate_predictor.ipynb
experiments/rates/data/: Insurance_Dataset.csv  sm_insurance_dataset.csv
experiments/rates/output/: sample_data.csv  sample_data_111.csv  sample_data_122.csv  sample_data_126.csv  sample_data_54.csv  sample_data_79.csv  sample_data_98.csv  sample_data_99.csv
experiments/rates/postal_codes/: pull.py
experiments/rates/ratebot/: bot.py  cleaning.py  config.py  utils.py
(+254 files in other folders)
