[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx==0.26.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pytest==8.0.0",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
    "dotenv>=0.9.9",
    "googlemaps>=4.10.0",
    "requests>=2.32.4",
    "websockets>=15.0.1",
]

[tool.uv.workspace]
members = ["server"]
