[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx==0.26.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pytest==8.0.0",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
    "dotenv>=0.9.9",
    "googlemaps>=4.10.0",
    "requests>=2.32.4",
    "websockets>=15.0.1",
    "Pillow>=10.0.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.38.38",
    "plotly>=5.18.0",
    "openmeteo-requests>=1.1.0",
    "requests-cache>=1.1.0",
    "retry-requests>=2.0.0",
    "pandas>=2.0.0",
    "nbformat>=4.2.0",
    "ipython>=8.0.0",
    "kaleido>=0.2.1",
    "botocore>=1.38.38",
    "trimesh>=4.0.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "bcrypt>=4.3.0",
    "redis>=6.2.0",
    "paho-mqtt>=2.1.0",
]

[tool.uv.workspace]
members = ["server", "iot", "iot/zigbee"]
