[project]
name = "rates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.2.5",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "geopy>=2.4.1",
    "isort>=6.0.1",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
    "playwright>=1.52.0",
    "pydantic>=2.10.6",
]
