[project]
name = "prod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "darts>=0.35.0",
    "fastapi>=0.116.1",
    "joblib>=1.5.1",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "uvicorn[standard]>=0.27.0",
    "curl_cffi>=0.6.0",
] 