[project]
name = "wdn_sim"
version = "0.1.0"
description = "Residential water distribution network Monte-Carlo simulator"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "scipy>=1.13.1",
    "numpy>=1.21.0",
    "setuptools<80.9.0",
    "tqdm>=4.67.1",
    "wntr>=1.3.2",
    "tsnet>=0.2.0",
    "polars>=0.20.0",
    "xarray>=2023.1.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.9"
]

[project.optional-dependencies]
# Development / testing extras
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
